--- a/1.html
+++ b/1.html
@@ -12,16 +12,12 @@
             <li><a href="https://yun-yeojun.github.io/Web_Study/Week1/WEB1-HTML%20&%20Internet/2.html"><u>CSS</u></a></li>
             <li><a href="https://yun-yeojun.github.io/Web_Study/Week1/WEB1-HTML%20&%20Internet/3.html"><u>JavaScript</u></a></li>
         </ol>
-        <h2>JavaScript</h2>
+        <h2>WEB</h2>
         <p>
-            JavaScript (/ˈdʒɑːvəskrɪpt/), often abbreviated JS, 
-            is a programming language that is one of the core 
-            technologies of the World Wide Web, alongside HTML
-            and CSS. Over 97% of websites use JavaScript on the 
-            client side for web page behavior, often incorporating 
-            third-party libraries. All major web browsers have a 
-            dedicated JavaScript engine to execute the code on 
-            users' devices. 
+            The World Wide Web (WWW), commonly known as the Web, was originally a hypertext document management system accessed over the Internet. It has since evolved into the world's dominant software platform.
+        </p>
+        <p>
+            The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by a software application called a web browser, and are published by a software application called a web server.
         </p>
     </body>
 </html>
